--- a/RDDVectorMatrix/pom.xml
+++ b/RDDVectorMatrix/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rdd</artifactId>
+    <artifactId>rddvetormatrix</artifactId>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
