Add Spark Linear Regression example

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>LinearRession</module>
         <module>SVM</module>
         <module>RDDVectorMatrix</module>
+        <module>RandomForeast</module>
     </modules>
 
     <parent>
